--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "unocss": "^0.46.5",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
     "typescript": "^4.6.4",
+    "unocss": "^0.46.5",
+    "unplugin-auto-import": "^0.11.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
   }
