--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
+    "@iconify/json": "^2.1.140",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
+    "naive-ui": "^2.33.5",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.4",
+    "unplugin-icons": "^0.14.13",
+    "unplugin-vue-components": "^0.22.9",
+    "vant": "^3.6.5",
     "vite": "^3.2.3",
+    "vite-plugin-fonts": "^0.6.0",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^1.0.9"
   }
 }
