--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
+    "eslint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "vue": "^3.2.41",
@@ -15,10 +17,14 @@
   "devDependencies": {
     "@iconify/json": "^2.1.140",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
+    "eslint": "^8.28.0",
+    "eslint-plugin-vue": "^9.7.0",
     "naive-ui": "^2.33.5",
-    "typescript": "^4.6.4",
+    "typescript": "4.5.5",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-icons": "^0.14.13",
