--- a/package.json
+++ b/package.json
@@ -1,38 +1,69 @@
 {
-  "name": "Metu",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
-    "eslint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
-  },
-  "dependencies": {
-    "vue": "^3.2.41",
-    "vue-i18n": "^9.2.2"
-  },
-  "devDependencies": {
-    "@iconify/json": "^2.1.140",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vitejs/plugin-vue-jsx": "^2.1.1",
-    "eslint": "^8.28.0",
-    "eslint-plugin-vue": "^9.7.0",
-    "naive-ui": "^2.33.5",
-    "typescript": "4.5.5",
-    "unocss": "^0.46.5",
-    "unplugin-auto-import": "^0.11.4",
-    "unplugin-icons": "^0.14.13",
-    "unplugin-vue-components": "^0.22.9",
-    "vant": "^3.6.5",
-    "vite": "^3.2.3",
-    "vite-plugin-fonts": "^0.6.0",
-    "vite-plugin-style-import": "^2.0.0",
-    "vue-tsc": "^1.0.9"
-  }
+    "name": "metu",
+    "private": true,
+    "version": "0.0.0",
+    "type": "commonjs",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview",
+        "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
+        "eslint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+        "prettier:comment": "自动格式化当前目录下的所有文件",
+        "prettier": "prettier --write ./**/*.{vue,ts,tsx,js,jsx,css,less,scss,json,md}",
+        "stylelint": "stylelint \"./**/*.{css,less,vue,html}\" --fix",
+        "prepare": "husky install",
+        "commit": "git-cz"
+    },
+    "dependencies": {
+        "vue": "^3.2.41",
+        "vue-i18n": "^9.2.2"
+    },
+    "devDependencies": {
+        "@iconify/json": "^2.1.140",
+        "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@typescript-eslint/parser": "^5.43.0",
+        "@vitejs/plugin-vue": "^3.2.0",
+        "@vitejs/plugin-vue-jsx": "^2.1.1",
+        "commitizen": "^4.2.5",
+        "commitlint-config-cz": "^0.13.3",
+        "cz-conventional-changelog": "^3.3.0",
+        "cz-customizable": "^7.0.0",
+        "eslint": "^8.28.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-vue": "^9.7.0",
+        "husky": "^8.0.2",
+        "lint-staged": "^13.0.3",
+        "naive-ui": "^2.33.5",
+        "postcss": "^8.4.19",
+        "postcss-html": "^1.5.0",
+        "postcss-less": "^6.0.0",
+        "prettier": "^2.7.1",
+        "stylelint": "^14.15.0",
+        "stylelint-config-prettier": "^9.0.4",
+        "stylelint-config-recommended-less": "^1.0.4",
+        "stylelint-config-recommended-scss": "^8.0.0",
+        "stylelint-config-standard": "^29.0.0",
+        "stylelint-config-standard-vue": "^1.0.0",
+        "stylelint-less": "^1.0.6",
+        "stylelint-order": "^5.0.0",
+        "stylelint-scss": "^4.3.0",
+        "typescript": "4.5.5",
+        "unocss": "^0.46.5",
+        "unplugin-auto-import": "^0.11.4",
+        "unplugin-icons": "^0.14.13",
+        "unplugin-vue-components": "^0.22.9",
+        "vant": "^3.6.5",
+        "vite": "^3.2.3",
+        "vite-plugin-fonts": "^0.6.0",
+        "vite-plugin-style-import": "^2.0.0",
+        "vue-tsc": "^1.0.9"
+    },
+    "config": {
+        "commitizen": {
+            "path": "node_modules/cz-customizable"
+        }
+    }
 }
