--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@vueuse/core": "^9.5.0",
         "axios": "^1.1.3",
         "pinia": "^2.0.24",
+        "postcss-cli": "^10.0.0",
+        "postcss-scss": "^4.0.5",
         "vue": "^3.2.41",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.6"
@@ -30,6 +32,7 @@
         "@typescript-eslint/parser": "^5.43.0",
         "@vitejs/plugin-vue": "^3.2.0",
         "@vitejs/plugin-vue-jsx": "^2.1.1",
+        "autoprefixer": "^10.4.13",
         "commitizen": "^4.2.5",
         "commitlint-config-cz": "^0.13.3",
         "cz-conventional-changelog": "^3.3.0",
