--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint-plugin-vue": "^9.7.0",
         "husky": "^8.0.2",
         "lint-staged": "^13.0.3",
+        "mockjs": "^1.1.0",
         "naive-ui": "^2.33.5",
         "postcss": "^8.4.19",
         "postcss-html": "^1.5.0",
