--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "type": "commonjs",
     "scripts": {
-        "dev": "vite",
+        "dev": "cross-env NODE_ENV=development vite",
         "build": "vue-tsc && vite build",
         "preview": "vite preview",
         "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
@@ -39,6 +39,7 @@
         "commitizen": "^4.2.5",
         "commitlint-config-cz": "^0.13.3",
         "conventional-changelog-cli": "^2.2.2",
+        "cross-env": "^7.0.3",
         "cz-conventional-changelog": "^3.3.0",
         "cz-customizable": "^7.0.0",
         "eslint": "^8.28.0",
@@ -72,6 +73,7 @@
         "vant": "^3.6.5",
         "vite": "^3.2.3",
         "vite-plugin-fonts": "^0.6.0",
+        "vite-plugin-mock": "^2.9.6",
         "vite-plugin-style-import": "^2.0.0",
         "vue-tsc": "^1.0.9"
     },
