--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "metu",
     "private": true,
     "version": "0.0.1",
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
         "dev": "cross-env NODE_ENV=development vite",
         "build": "vue-tsc && vite build",
